# ITMO

./: README.md
Android/ContactList/: settings.gradle
Android/Weather 2/: local.properties
Android/Weather REST Client/: gradle.properties  settings.gradle
Android/Weather REST Client & Coroutines/: gradle.properties  settings.gradle
Android/Weather REST Client & SQLite/: gradle.properties  settings.gradle
C++/Homework 1/: message.txt
C++/Homework 10/: CMakeLists.txt  description.txt  main.cpp
C++/Homework 10/business/headers/: Algorithm.h  AlgorithmFactory.h  AverageAlgorithm.h  RandomAlgorithm.h  SortAlgorithm.h
C++/Homework 10/business/sources/: Algorithm.cpp  AverageAlgorithm.cpp  RandomAlgorithm.cpp  SortAlgorithm.cpp
C++/Homework 10/data/: algorithm.txt  result.txt
C++/Homework 10/database/: orders.txt
C++/Homework 10/domain/headers/: Order.h  Util.h
C++/Homework 10/domain/sources/: Order.cpp  Util.cpp
C++/Homework 11/: BadFromString.cpp  BadFromString.h  main.cpp
C++/Homework 2/: Batsman.cpp  Batsman.h
C++/Homework 5/: StringBuilder.cpp  StringBuilder.h
C++/Homework 6/: Human.cpp  Human.h  Program.cpp  Statement.txt
C++/Homework 7/: Array.cpp  Array.h  Array.hpp  Program.cpp
C++/Homework 8/: Program.cpp
C++/Homework 9/: Array.cpp  Array.hpp  main.cpp
Cryptography/COMP128/: COMP128.kt
Cryptography/CubeHash/: Cubehash.kt
Cryptography/RC4/: RC4.kt
Cryptography/RSA/: RSA.kt
Java Advanced/Homework 1/: Statement.html  Walk.java
Java Advanced/Homework 10/: HelloUDPClient.java  HelloUDPServer.java  TaskFactory.java  Util.java
(+805 files in other folders)
